# burbur

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO  conanfile.py
.github/workflows/: cmake.yml
cmake/: common.cmake  warnings.cmake
conan/: conanfile.py
conan/config/: conan.conf
scripts/: prepare_env.sh
src/App/: CMakeLists.txt  Window.h  main.cpp
src/App/src/: Camera.cpp  Camera.h  Object.cpp  Object.h  Render.cpp  Render.h  Scene.h  ShaderProgramBuilder.cpp  ShaderProgramBuilder.h  Utils.cpp  Widget.cpp  Widget.h  Window.cpp  Window.h  main.cpp
src/Model/: CMakeLists.txt  Model.h
src/Model/src/: Model.cpp
src/Render/: CMakeLists.txt  Camera.h  Render.h  Scene.h  Shader.h  Shader.inl  ShaderProgramBuilder.h
src/Render/src/: Camera.cpp  Render.cpp  Scene.cpp  Shader.cpp  ShaderProgramBuilder.cpp
src/Render/test/: CameraTest.cpp  TestUtils.h
